@@ -6,6 +6,7 @@
 * Filter out memory address from unpaper warning. Closes bug #205
   (Gscan2pdf problem with unpaper 6.2) and Debian bug #807565
   (Unpaper error dialog cannot be hidden permanently)
+* Ensure that process numbering is properly reinitialised when queue is empty.
 
 
 1.3.6 (20.12.2015):
